# vic2enc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/vic2enc-cli/: Cargo.toml
crates/vic2enc-cli/src/: main.rs
crates/vic2enc-core/: Cargo.toml
crates/vic2enc-core/src/: convert.rs  dummy_latin1.rs  lib.rs  pa_migrate.rs  safe_token.rs
crates/vic2enc-core/tests/: roundtrip.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html
scripts/: 一键编码.bat  一键解码.bat  使用说明.txt
