[workspace]
resolver = "2"
members = [
    "crates/vic2enc-core",
    "crates/vic2enc-cli",
]
# desktop/src-tauri is added to members once scaffolded (see Tauri step).

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vic2Encoding contributors"]
repository = "https://github.com/shudorcl/vic2enc"

[workspace.dependencies]
encoding_rs = "0.8"
anyhow = "1"
thiserror = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
