# Detached from the root workspace (own [workspace] table) so that
# `cargo test --workspace` for core/cli stays fast and does not compile Tauri.
[workspace]

[package]
name = "vic2enc-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tauri desktop front-end for the Victoria 2 encoding converter"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vic2enc-core = { path = "../../crates/vic2enc-core", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
